Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,7 +1,44 @@
+<!DOCTYPE html>
 <html>
-    <body>
-        <p>
-            Is this going to work, or does GitHub just completely and entirely suck.  Find out next time...
-        </p>
-    </body>
+
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Elijahsheridan.GitHub.io : TNT U16 Website">
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Elijahsheridan.GitHub.io</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/elijahsheridan">View on GitHub</a>
+
+          <h1 id="project_title">Elijahsheridan.GitHub.io</h1>
+          <h2 id="project_tagline">TNT U16 Website</h2>
+
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <p>test</p>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
+
+  </body>
 </html>
