--- a/index.html
+++ b/index.html
@@ -12,33 +12,8 @@
   </head>
 
   <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/elijahsheridan">View on GitHub</a>
-
-          <h1 id="project_title">Elijahsheridan.GitHub.io</h1>
-          <h2 id="project_tagline">TNT U16 Website</h2>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <p>test</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
+    <p>
+      test
+    </p>
   </body>
 </html>
